[package]
name = "allocbench"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libloading = "0.8.0"

[dependencies.winapi]
version = "0.3.9"
features = ["minwindef", "memoryapi", "winnt"]

[dev-dependencies]
criterion = { version = "0.5.1" }

[[bench]]
name = "bench_allocation"
harness = false
